# vyatta-controller

./: .gitignore  LICENSE  Makefile  README.md  TODO  meson.build  meson_options.txt
client/: Makefile  meson.build  snapshot.c  vplsh.c
daemon/: Makefile  compat.h  configcmd.c  configcmd.h  configdb.c  configdb.h  configstore.c  configstore.h  controller.h  devname.c  fsnotify.c  hwbinding.c  ip_addr.h  main.c  meson.build  mnlutil.c  mrtstat.c  mrtstat.h  nlmsg.c  nlmsg.h  parser.c  parser.h  port.c  protobuf.c  protobuf.h  request.c  snapshot.c  team.c  team.h  topic.c  tunnel.c  util.c  vplane.c  vplane.h
debian/: changelog  control  copyright  golang-github-danos-vyatta-controller-protobuf-dev.lintian-overrides  libvplaned-dev.install  libvplaned-dev.lintian-overrides  libvplaned1.install  libvyatta-controller-proto-dev.install  libvyatta-controller-proto-dev.lintian-overrides  libvyatta-controller-proto-support.install  libvyatta-controller-proto-support.lintian-overrides  libvyatta-controller-proto1.install  libvyatta-controller-proto1.lintian-overrides  rules  vplane-controller-dbg.lintian-overrides  vplane-controller.init.d  vplane-controller.install  vplane-controller.lintian-overrides  vplane-controller.preinst  vplane-controller.service  vplane-controller.socket
examples/: controller.conf  dataplane.conf
lib/: Makefile  libvplaned.pc  meson.build  vplaned.h  vplaned_cfg.c  vplaned_cfg.h  vplaned_cstore.c  vplaned_cstore.h  vplaned_event.c  vplaned_event.h
protobuf/: Makefile  VPlanedEnvelope.proto  meson.build
scripts/: vyatta-generate-pb-perl.pl
snmp/: .gitignore  Makefile  meson.build  vplane-snmp.c
test/: resync.c  tunnel.c
test/example/: Makefile  bfdtest.c  meson.build
test/module/: Makefile  hwbinding_test.mk  libvplaned_cfg_test.mk  libvplaned_cstore_test.mk  meson.build  nlmsg_test.mk  parser_test.mk  request_test.mk  snapshot_test.mk  vplane_test.mk
test/module/src/: all_tests.cpp  hwbinding_cpputest.cpp  libvplaned_cfg_cpputest.cpp  libvplaned_cstore_cpputest.cpp  nlmsg_cpputest.cpp  parser_cpputest.cpp  request_cpputest.cpp  snapshot_cpputest.cpp  vplane_cpputest.cpp
test/module/src/mocks/: common_mocks.cpp  cpputest_comparators.h  fabric_crypto_mocks.cpp  fabric_topo_mocks.cpp  parser_mocks.cpp  snapshot_mocks.cpp  stubs.h
test/module/src/testcfgs/: 2vplanes.conf  2vplanes6.conf  bad.conf  default.conf  defvplanes.conf  interface.conf  interface.conf2  local.conf  novplanes.conf  routesourcebad.conf  routesourcekernel.conf  routesourcerib.conf
tools/: hwbinding
